syntax = "proto3";
package blob;

service BlobHandler {
    rpc Upload (stream BlobData) returns (BlobInfo);
    rpc Download (BlobInfo) returns (stream BlobData);
}

message FileInfo {
    string extension = 1;
    string meta_text = 2;
    string file_name = 3;
}

message BlobInfo {
    string blob_id = 1;
}

message BlobData {
    oneof data {
        FileInfo info = 1;
        bytes chunk_data = 2;
    };
}
